feat: 🎸 nav bar contents

--- a/src/gp/components/pages/basicLayout/GpBasicNavBar.module.scss
+++ b/src/gp/components/pages/basicLayout/GpBasicNavBar.module.scss
@@ -14,3 +14,21 @@
     }
   }
 }
+
+.frame {
+  display: flex;
+  gap: 1rem;
+  overflow: auto;
+  width: 100%;
+}
+
+.start {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.end {
+  display: flex;
+  flex-grow: 1;
+  justify-content: flex-end;
+}
