feat: 🎸 base styles

--- a/src/gp/styles/elements.scss
+++ b/src/gp/styles/elements.scss
@@ -54,23 +54,27 @@ li {
 }
 
 details {
-  border-color: var(--spectrum-alias-border-color,var(--spectrum-global-color-gray-400));
-  border-radius: var(--spectrum-alias-border-radius-regular,var(--spectrum-global-dimension-size-50));
+  border-color: var(--box-border-color);
+  border-radius: var(--box-border-radius);
   border-style: solid;
-  border-width: var(--spectrum-alias-border-size-thin,var(--spectrum-global-dimension-static-size-10));
+  border-width: var(--box-border-width);
+  color: var(--box-fg);
   padding: 1rem;
 }
 
 summary {
-  border-color: var(--spectrum-alias-border-color,var(--spectrum-global-color-gray-400));
+  background-color: var(--box-bg);
+  border-color: var(--box-border-color);
+  border-radius: var(--box-border-radius);
   border-style: none;
-  border-width: var(--spectrum-alias-border-size-thin,var(--spectrum-global-dimension-static-size-10));
+  border-width: var(--box-border-width);
   cursor: pointer;
   margin: -1rem -1rem;
-  padding: 3px var(--spectrum-global-dimension-size-150) 5px calc(var(--spectrum-global-dimension-size-150) - 1px);
+  padding: 3px 1rem;
 
   details[open] & {
     border-bottom-style: solid;
+    border-radius: var(--box-border-radius) var(--box-border-radius) 0 0;
     margin-bottom: 0;
   }
 }
@@ -92,10 +96,10 @@ pre {
 }
 
 a {
-  color: var(--spectrum-global-color-blue-600);
+  color: var(--link-fg);
 
   &:hover {
-    color: var(--spectrum-global-color-red-600);
+    color: var(--link-hover-fg);
   }
 
   &[href^="http"] {
@@ -113,7 +117,11 @@ a {
 }
 
 button {
-  color: var(--spectrum-alias-text-color,var(--spectrum-global-color-gray-800));
+  border-color: var(--box-border-color);
+  border-radius: var(--box-border-radius);
+  border-style: solid;
+  border-width: var(--box-border-width);
+  color: var(--box-fg);
 }
 
 code {
