feat: 🎸 button style

--- a/src/gp/styles/elements.scss
+++ b/src/gp/styles/elements.scss
@@ -122,6 +122,7 @@ button {
   border-style: solid;
   border-width: var(--box-border-width);
   color: var(--box-fg);
+  cursor: pointer;
 }
 
 code {
