--- a/src/gp/styles/vars.scss
+++ b/src/gp/styles/vars.scss
@@ -5,9 +5,11 @@
   --base-border-color: #ccc;
   --box-bg: rgb(239, 239, 239);
   --box-border-color: var(--spectrum-alias-border-color, var(--spectrum-global-color-gray-400, rgb(118, 118, 118)));
+  --box-border-color-disabled: rgb(200, 200, 200);
   --box-border-radius: var(--spectrum-alias-border-radius-regular, var(--spectrum-global-dimension-size-50, 2px));
   --box-border-width: var(--spectrum-alias-border-size-thin, var(--spectrum-global-dimension-static-size-10, 0.5px));
   --box-fg: var(--spectrum-alias-text-color, var(--spectrum-global-color-gray-800, var(--base-fg)));
+  --box-fg-disabled: #999;
   --disabled-fg: #999;
   --link-fg: var(--spectrum-global-color-blue-600, #00c);
   --link-hover-fg: var(--spectrum-global-color-red-600, #c00);
