--- a/src/gp/styles/vars.scss
+++ b/src/gp/styles/vars.scss
@@ -10,6 +10,10 @@
   --box-border-width: var(--spectrum-alias-border-size-thin, var(--spectrum-global-dimension-static-size-10, 0.5px));
   --box-fg: var(--spectrum-alias-text-color, var(--spectrum-global-color-gray-800, var(--base-fg)));
   --box-fg-disabled: #999;
+  --button-bg: #eee;
+  --button-border-color: var(--box-border-color);
+  --button-fg: var(--box-fg);
+  --button-shadow-focus: 0 0 0.3rem #0003 inset;
   --disabled-fg: #999;
   --link-fg: var(--spectrum-global-color-blue-600, #00c);
   --link-hover-fg: var(--spectrum-global-color-red-600, #c00);
